# pyobfuscator

./: .gitignore  README.chs.md  README.md  pyproject.toml
bench/: .gitignore  benchmark.py
bench/workloads/: cpu_workload.py  str_workload.py
docs/: ARCHITECTURE.chs.md  ARCHITECTURE.md  OPTIONS.chs.md  OPTIONS.md
sample/: ai_markers.py  build_ctf.py  ctf_strings.json
sample/project_test/: README.md  build_project.py
sample/project_test/src/: main.py
sample/single_file/: build_ctf.py  ctf_test.py  decoy_ctf.py
src/pyobfuscator/: __init__.py  options.py  packer.py
src/pyobfuscator/cff/: __init__.py  analyze.py  attest.py  cfg.py  diagnostics.py  directives.py  emit.py  gate.py  lambdalift.py  marker.py  module_wrap.py  names.py  rename.py  sourcemap.py  (+1 more)
tests/: conftest.py  equivalence.py  test_analyze.py  test_api.py  test_archive.py  test_attest.py  test_bench_smoke.py  test_blob_chunked.py  test_block_split.py  test_body_cohash.py  test_bogus_clone.py  test_bogus_mirror.py  test_builtin_integrity.py  test_cfg.py  test_cfg_exc.py  test_cfg_finally.py  test_cfg_nested.py  test_classes.py  test_cmphide.py  test_compress_output.py  test_coverage.py  test_dataobf.py  test_dec_indirect.py  test_determinism_hashseed.py  test_diagnostics.py  test_dictindirect.py  test_directives.py  test_dispatch_delta.py  test_docstring_warning.py  test_emit.py  test_equivalence.py  test_flatten.py  test_flatten_exc.py  test_flatten_finally.py  test_flatten_nested.py  test_gate.py  test_global_indirect.py  test_helper_param_rename.py  test_hidden_args.py  test_junkcode.py  (+64 more)
(+28 files in other folders)
