[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobfuscator"
version = "0.0.0"
description = "Source-level Python control-flow obfuscator"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyobfuscator = ["viz/*.js", "viz/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
